# claude-20x

./: .gitignore  .gitmodules  .mcp.json  A2A_INTEGRATION_EXAMPLE.md  AGENT_MANAGER_README.md  BaseA2AServer.js  CLAUDE.md  COHERENCE_REPORT_FINAL.md  COMANDOS_CLAUDE_FLOW.md  CacheMiddleware.js  FILES_CREATED_SUMMARY.md  GEMINI.md  MARVIN_SISTEMA_COMPLETO_SUCESSO.md  MCP_A2A_GATEWAY_INCIDENT.md  MCP_CONFIGURATION_FINAL.md  QUICK_START.md  README-AGENTS.md  README.md  README_HelloWorld_Always_Active.md  RELATORIO_COHERENCE_100.md  RedisCache.js  SERVICE-DISCOVERY-DEMO.py  SERVICE-DISCOVERY-GUIDE.md  SOLUCAO_ROLLBACK_SQLALCHEMY.md  SPARC_DENO_SOLUTION.md  SUBMODULE_SETUP.md  TROUBLESHOOTING_OUTRA_MAQUINA.md  a2a-agents-improvements.md  a2a-entropy-integration.js  agent_manager.sh  auto_start_helloworld.sh  avaliacao_comportamental_vendas.md  coder-fixed.md  coherence-fixer-enhanced.md  config.py  ensure_ui_running.sh  entropy-control-system.js  entropy-system-test.js  fix_sqlalchemy_engine.py  guardian_a2a_architecture.md  (+39 more)
.claude/: settings.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: PLANO_MELHORIAS_APROVADO.md  README.md  TEMPLATE-subagent.md  UPGRADE_REPORT_A2A_v2.0.md  a2a-agent-card-manager.md  a2a-authn-authz-manager.md  a2a-client.md  a2a-implementation-specialist.md  a2a-message-handler.md  a2a-neural-optimizer.md  a2a-part-artifact-handler.md  a2a-push-notification-handler.md  a2a-python-optimization-plan.md  a2a-queen-coordinator.md  a2a-server.md  a2a-streaming-handler.md  a2a-task-manager.md  agent-coordination-protocol.md  agent-optimization-guide.md  api-testing-specialist.md  behavioral-assessment-specialist.md  code-review-expert.md  coherence-checker.md  coherence-fixer.md  mcp-list-interpreter.md  multi-agent-example.md  quick-assessment-specialist.md  rag-coordinator.md  subagent-expert-guide.md  subagent-expert.md  tool-selection-matrix.md  unified-coherence-checker.md  upgrade-agents-to-a2a.sh  validation-checklist.md
.github/workflows/: a2a-tests.yml
.hive-mind/: config.json  hive.db
.swarm/: memory.db  memory.db-shm  memory.db-wal
HelloWorld/: AUTENTICACAO_A2A.md  COMANDOS_RAPIDOS.md  FLUXO-DIA-13.md  HELLOWORLD_AGENT_TASKSTATE_COMPLETED.md  HELLOWORLD_TESTE_REMOTO.md  HELLO_INSPETOR.md  INDEX.md  MANTER_PORTA_9999_SEMPRE_ATIVA.md  README.md
agents/: BaseA2AServer.js  README.md  agent_card_validator.py  start_all_agents.sh  test_discovery.py
agents/.well-known/: analyst-agent.json  coder-agent.json  coordinator-agent.json  researcher-agent.json  sparc-a2a-agent.json
agents/a2a/: a2a-config.json  agent_executor.py  test_a2a_agent.py
agents/a2a-estudo/: README.md  __init__.py  __main__.py  agent.py  pyproject.toml
agents/a2a-estudo/.well-known/: agent.json
agents/a2a-python/: Dockerfile  README_SERVER.md  SUCCESS.md  USAGE.md  demo.py  docker-compose.yml  quick_test.py  server.py  start_server.sh  test_server.py
agents/gemini/: README.md  a2a-config.json  agent.py  pyproject.toml
agents/helloworld/: README.md  a2a-config.json  a2a-server.js  agent.py  agent_executor.py
agents/marvin/: README.md  __main__.py  agent.py  agent_executor.py  install_service.sh  marvin_control.sh  marvin_daemon.py  pyproject.toml  server.py
agents/veo3/: .env.example  .gitignore  CONFIG.md  README.md  __init__.py  a2a-config.json  agent.py  agent_executor.py  main.py  pyproject.toml  test_veo3_agent.py
claude-code-10x/: claude-flow-a2a-config.json  test-guardian.ts
claude-code-10x/.well-known/: agent.json
claude-code-10x/claude-flow-diego/: README.md  a2a-mcp-unified-config.json  docker-compose.a2a.yml  guardian-bridge-agent.ts  package-lock.json  package.json  test-guardian-a2a.js  test-integration.py
claude-code-10x/mcp-run-ts-tools/: README.md
claude-code-10x/memory/: README.md  a2a-server.js  claude-flow-data.json
config/: a2a-unified.json  agents.json
deno/: README.md
discovery/: service-discovery.py
docs/: COMO_RODAR_HELLOWORLD.md  INDEX.md  PRP-001-agent-types-distinction.md  TROUBLESHOOTING.md  sparc-optimization-report.md
docs-sparc/: AUDITORIA-SPARC-COMPLETA.md  COMANDOS-SPARC.md  IMPLEMENTACAO-RECOMENDACOES.md  SPARC-Advanced-Resources-Guide.md  SPARC_PSEUDOCODE_REORGANIZATION.md  SPARC_PSEUDOCODE_SUMMARY.md
docs/architecture/: api-interfaces.md  architecture-spec.md  component-diagrams.md  data-structures.md  deployment-plan.md  technical-implementation.md
logging/: central-logger.py
memory/: claude-flow-data.json  memory-store.json
memory/agents/: README.md
memory/backups/: backup-2025-07-14T11-18-56-721Z.json
memory/data/: entries.json
memory/sessions/: README.md
run/: check_auto_start.sh
run-a2a/: AUTO_START_CONTROL.md  auto_start_disabled.flag  reable_auto_start.sh
run-a2a/config/: agents.json
script-start/: run-deno-server.sh  start-claudia.sh
scripts/: check_agents.sh  script.js  start-system.js  start_agents.sh
specs/: a2a-agent-cards-architecture.md  a2a-agent-cards-pseudocode.md  a2a-agent-cards-specification.md  a2a-jsonrpc-endpoints-pseudocode.md  a2a-jsonrpc-server-architecture.md  a2a-jsonrpc-server-specification.md  mcp-resources-discovery-pseudocode.md  mcp-resources-specification.md
src/a2a-server/: README.md  package-lock.json  package.json  tsconfig.json
tests/: A2ATestFramework.cjs  run-a2a-tests.cjs  setup.js
tools/: README.md
turma-gestores/: index.html  manifest.json  script.js  server.py  styles.css  sw.js
ui/: CORRECAO_AGENTINFO.md  README.md  README_BACKEND_FIX.md  README_MESOP_DEBUGGING.md  RELATORIO_FINAL_MESOP.md  main.py  marvin.db  prevent_auto_start.sh  start_ui_with_backend.sh  test_agent_info_fix.py  test_discovery.py  test_emoji_support.py  types_patch.py
ui-mesop-py/: backend_server.py  disable_auto_start.sh  main.py  pyproject.toml  trigger_discovery.py
v2-ui-ts/: MIGRATION_STATUS.md  README.md  document-names.json
vibe-kanban-manager/: README.md  VIBE_KANBAN_QUICK_GUIDE.md  logs.sh  menu.sh  open.sh  restart.sh  start.sh  status.sh  stop.sh  vibe-kanban-info.md  vibe-kanban-manager.sh  vk
(+247 files in other folders)
